# sel-py-template

./: .gitignore  README.md  TEMPLATE_OWNERS.md  conftest.py  project_settings.ini.example  pyproject.toml  pytest.ini
.github/: .dependabot.yml  dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  poetry-lock.yml  test.yml  tests.yaml  unit-tests.yaml
docs/: architecture.md  cli.md  configuration.md  troubleshooting.md
examples/: example_page.py
scripts/: README.md  clear_cache.py  setup_structure.py  setup_venv.ps1
src/: README.md  __init__.py
src/pages/: __init__.py  base_page.py  example_page.py
src/pytest_a11y/: assertions.py  plugin.py  plugin1.py  types.py
src/pytest_a11y/axe/: axe_runner.py  fixtures.py  runner.py
src/pytest_a11y/reporting/: html_report.py  html_report_1.py  html_report_old.py  json_report.py  report_generator.py  report_generator_works.py
src/pytest_a11y/visual/: axe_overlay.py  axe_overlay_1.py  axe_overlay_2.py
src/pytest_axe_a11y/: assertions.py  plugin.py  plugin1.py  screenshots.py  types.py
src/pytest_axe_a11y/axe/: fixtures.py  runner.py
src/pytest_axe_a11y/reporting/: html_report.py  html_report_1.py  html_report_old.py  report_generator.py  report_generator_works.py
src/pytest_axe_a11y/visual/: axe_overlay.py  axe_overlay_1.py  axe_overlay_2.py
src/sel_py_template/pages/: __init__.py  base_page.py  example_page.py
src/sel_py_template/ui/: __init__.py  elements.py
src/sel_py_template/utils/: __init__.py  artifact_config.py  artifact_manager.py  logger_util.py  report_plugin.py
src/ui/: __init__.py  elements.py
src/utils/: __init__.py  logger_util.py  report_plugin.py
template_tests/integration/: conftest.py  fixtures_html.py  helpers.py  subprocess_helpers.py  test_a11y.py  test_a11y_reporting.py  test_artifact_lifecycle.py  test_browser_setup.py  test_framework_resilience.py  test_smoke_workflow.py
template_tests/unit/: test_project_settings.py
template_tests/unit/pages/: test_base_page.py
template_tests/unit/ui/: test_elements.py
template_tests/unit/utils/: test_logger_util.py  test_report_plugin.py
tests/: __init__.py  conftest.py  test_a11y_sample.py  test_browser_setup.py  test_framework_resilience.py
tests/integration/: conftest.py  test_a11y.py  test_a11y_reporting.py  test_artifact_lifecycle.py  test_browser_setup.py  test_framework_resilience.py  test_smoke_workflow.py
tests/unit/: conftest.py
tests/unit/pages/: test_base_page.py
tests/unit/ui/: test_elements.py
tests/unit/utils/: test_artifact_manager.py
