[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sel-py-template"
version = "0.0.0"
description = "Selenium Python Template."
readme = "README.md"
authors = ["Farial Mahbub <mahbub.farial@gmail.com>"]
license = "MIT"
keywords = ["selenium", "testing", "python", "automation"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.0"
webdriver-manager = "^4.0.2"
pytest-xdist = "^3.8.0"
pytest-html-plus = "^0.4.2"
dulwich = "^0.21.0"

[[tool.poetry.packages]]
include = "sel_py_template"

[tool.ruff]
line-length = 88
target-version = "py310"
# Allow Ruff to fix issues automatically
fix = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "W",   # pycodestyle warnings
    "I",   # import sorting
    "UP",  # modernize Python 3 syntax
    "N",   # naming conventions
    "S",   # security checks
    "B",   # bugbear (dangerous code patterns)
    "A",   # builtins shadowing
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line length (Black handles this)
    "S101",  # allow asserts in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.per-file-ignores]
# ignore print statements in scripts and test files
"tests/*" = ["S101", "T201"]
"scripts/*" = ["T201", "S603"]

[tool.black]
line-length = 88
target-version = ["py310"]
include = '\.pyi?$'
force-exclude = '\.venv'

[tool.isort]
profile = "black"
line_length = 88

# Poe the Poet tasks
[tool.poe.tasks]
# Format all code
fmt = [
    {cmd = "black ."},
    {cmd = "ruff check . --fix"},
]

# Check formatting without changing files
lint = [
    {cmd = "black --check ."},
    {cmd = "ruff check ."},
]

# Format then lint
fmt-lint = ["fmt", "lint"]

# Run tests
test = "pytest"

# Clean cache directories
[tool.poe.tasks.clean]
shell = """
python -c "
import shutil
from pathlib import Path

dirs = ['.pytest_cache', '.ruff_cache', '.mypy_cache']
for d in dirs:
    if Path(d).exists():
        shutil.rmtree(d)
        
for p in Path('.').rglob('__pycache__'):
    shutil.rmtree(p, ignore_errors=True)
"
"""

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q "
report_title = "Selenium Python Template Test Report"

[tool.mypy]
python_version = "3.10"
files = ["src", "tests"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
allow_redefinition = true
show_error_codes = true
pretty = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "pytest_html.*",
]
ignore_missing_imports = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.11.0"
isort = "^7.0.0"
ruff = "*"
pre-commit = "^4.4.0"
autoflake = "^2.3.1"
mypy = "^1.18.2"
types-requests = "^2.32.4.20260107"
types-pyyaml = "^6.0.12.20250915"
flake8 = "^7.3.0"
flake8-bugbear = "^25.10.21"
flake8-comprehensions = "^3.17.0"
pydocstyle = "^6.3.0"
flake8-builtins = "^3.1.0"
safety = "^3.7.0"
detect-secrets = "^1.5.0"
requests = "^2.32.5"
python-dotenv = "^1.2.1"
poethepoet = "^0.38.0"

[tool.poetry.scripts]
fmt-lint = "scripts.fmt_lint:main"