[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sel-py-template"
version = "1.0.0"
description = "Selenium Python Template."
readme = "README.md"
authors = ["Farial Mahbub <mahbub.farial@gmail.com>"]
license = "MIT"
keywords = ["selenium", "testing", "python", "automation"]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "==4.41.0"
webdriver-manager = "==4.0.2"
pytest-a11y = {git = "https://github.com/m-farial/pytest-a11y.git"}

[[tool.poetry.packages]]
include = "sel_py_template"
from = "src"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "UP",
    "N",
    "S",
    "B",
    "A",
    "RUF",
    "T",   # print() + debugger/breakpoints
]
ignore = [
    "E501",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]
"scripts/**" = ["T"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

# Poe the Poet tasks
[tool.poe.tasks]
fmt = "ruff format ."
lint = "ruff check . --fix"
lint-check = "ruff check ."
typecheck = "mypy src"
check = ["fmt", "lint", "typecheck"]
coverage = "pytest tests/unit --cov=src/sel_py_template --cov-branch --cov-report=term-missing --no-cov-on-fail --cov-report=xml --cache-clear tests/unit -q"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q "
testpaths = ["tests/unit", "tests/integration"]
report_title = "Selenium Python Template Test Report"
markers = [
    "integration: Integration tests (all integration tests should be marked with this)",
    "a11y: Tests for accessibility",
    "regression: Regression tests comparing against baselines",
    "e2e: End-to-end tests that may involve multiple steps and validations",
]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_any_generics = true
show_error_codes = true
pretty = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "selenium.*",
    "pytest_html_plus.*",
]
ignore_missing_imports = true

[tool.coverage.run]
branch = true
source = ["sel_py_template"]
omit = [
    "tests/*",
    "src/sel_py_template/__init__.py",
]

[tool.coverage.report]
fail_under = 100

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
black = "^26.1.0"
isort = "^8.0.1"
ruff = "*"
mypy = "^1.18.2"
safety = "^3.7.0"
detect-secrets = "^1.5.0"
pre-commit = "^4.4.0"
poethepoet = "^0.42.1"
pytest-xdist = "^3.8.0"
pytest-html-plus = "^0.5.0"
pytest-cov = "^7.0.0"
dulwich = "^1.1.0"
urllib3 = "^2.6.3"
authlib = "^1.6.6"

[tool.poetry.scripts]
fmt-lint = "scripts.fmt_lint:main"

[tool.poe.tasks.clean]
cmd = "python scripts/clear_cache.py"